assets/scss/plugins/kirki.scss
@use 'sass:list';

/* kirki default spacing */

.customize-control[class*="customize-control-kirki-"] + .customize-control[class*="customize-control-kirki-"] {
	margin-top: 12px;
}

/* kirki sortable */

.customize-control.customize-control-kirki-sortable .mai-toggle-hooks {
	float: right;
	margin: 0 0 4px 0;
	padding: 6px 12px 2px;
	color: #008dd4;
	font-size: 11px;
	font-style: normal;
	text-transform: uppercase;
	text-decoration: none;
	border-radius: 3px;
}

.customize-control.customize-control-kirki-sortable .mai-toggle-hooks:hover,
.customize-control.customize-control-kirki-sortable .mai-toggle-hooks:focus {
	text-decoration: underline;
	outline: none;
	box-shadow: none;
}

.customize-control.customize-control-kirki-sortable ul.ui-sortable {
	clear: both;
}

.customize-control.customize-control-kirki-sortable ul.ui-sortable li {
	border-radius: 3px;
}

.customize-control.customize-control-kirki-sortable ul.ui-sortable li:hover {
	cursor: move;
}

.customize-control.customize-control-kirki-sortable ul.ui-sortable li[data-value^="genesis_"] {
	font-size: 11px;
	font-family: "Courier New", Courier, monospace;
}

.customize-control.customize-control-kirki-sortable ul.ui-sortable li .dashicons.visibility {
	display: inline-flex;
	clear: none;
	width: 14px;
	height: 14px;
	margin: -3px 6px 0 0 !important;
	padding: 0;
	color: #555;
	line-height: 0;
	text-align: center;
	vertical-align: middle;
	background: #fff;
	border: 1px solid #7e8993;
	border-radius: 4px;
	outline: 0;
	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
	cursor: pointer;
	transition: 0.05s border-color ease-in-out;
	-webkit-appearance: none;
}

.customize-control.customize-control-kirki-sortable ul.ui-sortable li:not(.invisible) {
	border: 1px solid #7e8993;
}

.customize-control.customize-control-kirki-sortable ul.ui-sortable li:not([data-value^="genesis_"]):not(.invisible):not(.mai-sortable-expanded) {
	background: #fff;
}

.customize-control.customize-control-kirki-sortable ul.ui-sortable li[data-value^="genesis_"]:not(.invisible) {
	background: rgba(0, 0, 0, 0.02);
}

.customize-control.customize-control-kirki-sortable ul.ui-sortable li[data-value^="genesis_"]:not(.mai-sortable-expanded) {
	height: 0;
	margin: 0;
	padding: 0;
	overflow: hidden;
	border: 0;
	border-radius: 2px;
}

.customize-control.customize-control-kirki-sortable ul.ui-sortable li[data-value^="genesis_"]:not(.mai-sortable-expanded) > * {
	opacity: 0;
}

.customize-control.customize-control-kirki-sortable ul.ui-sortable li:not(.invisible) .dashicons.visibility {
	border: 1px solid #7e8993 !important;
}

/* remove kirki's eye. */
.customize-control.customize-control-kirki-sortable ul.ui-sortable li.invisible .dashicons.visibility::before {
	display: none !important;
}

/* this is to match ACF's checkbox styling. */
.customize-control.customize-control-kirki-sortable ul.ui-sortable li:not(.invisible) .dashicons.visibility::before {
	display: block;
	width: 100%;
	height: 100%;
	margin: 1px 0 0 -1px;
	transform: scale(1.4);
	content: url(data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20viewBox%3D%270%200%2020%2020%27%3E%3Cpath%20d%3D%27M14.83%204.89l1.34.94-5.81%208.38H9.02L5.78%209.67l1.34-1.25%202.57%202.4z%27%20fill%3D%27%231e8cbe%27%2F%3E%3C%2Fsvg%3E);
}

/* Standalone heading styling */

#customize-control-mai-engine-content-archives-post-image_alternate_heading,
#customize-control-mai-engine-content-archives-post-image_alternate_heading .customize-control-title,
#customize-control-mai-engine-content-archives-post-image_stack_heading,
#customize-control-mai-engine-content-archives-post-image_stack_heading .customize-control-title,
#customize-control-mai-engine-content-archives-post-boxed_heading,
#customize-control-mai-engine-content-archives-post-boxed_heading .customize-control-title {
	margin-bottom: 0 !important;
}

#customize-control-mai-engine-content-archives-post-image_alternate_heading + .customize-control,
#customize-control-mai-engine-content-archives-post-image_stack_heading + .customize-control,
#customize-control-mai-engine-content-archives-post-boxed_heading + .customize-control {
	margin-top: 4px !important;
}

/* Kirki responsive columns container */

.customize-control.customize-control-kirki-radio-buttonset[id$="columns_md"],
.customize-control.customize-control-kirki-radio-buttonset[id$="columns_sm"],
.customize-control.customize-control-kirki-radio-buttonset[id$="columns_xs"] {
	box-sizing: border-box !important;
	padding: 12px 0 16px 12px !important;
	border-left: 1px solid #ccd0d4 !important;
}

.customize-control.customize-control-kirki-radio-buttonset[id$="columns_md"],
.customize-control.customize-control-kirki-radio-buttonset[id$="columns_sm"] {
	margin: 0 !important;
}

.customize-control.customize-control-kirki-radio-buttonset[id$="columns_md"] {
	position: relative;
	border-top: 1px solid #ccd0d4 !important;
	border-radius: 3px 0 0 0;
}

.customize-control.customize-control-kirki-radio-buttonset[id$="columns_md"]::before {
	position: absolute;
	bottom: 100%;
	left: 7px;
	display: block;
	width: 0;
	height: 16px;
	border-left: 1px solid #ccd0d4 !important;
	content: "";
}

.customize-control.customize-control-kirki-radio-buttonset[id$="columns_xs"] {
	position: relative;
	margin: 0 0 12px 0 !important;
	border-bottom: 1px solid #ccd0d4 !important;
	border-radius: 0 0 0 3px;
}

/* kirki buttonset */

.customize-control.customize-control-kirki-radio-buttonset .buttonset {
	margin-left: 1px;
}

.customize-control.customize-control-kirki-radio-buttonset .buttonset .switch-label {
	margin-left: -1px;
	padding: 6px 4px;
	background: #fff;
	border: 1px solid #9fa7ae;
}
/* ... */

